All those sneaky miscommits!

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -3,14 +3,12 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="author" content="Daniel McGraw" />
+    <meta name="author" content="Your Name" />
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/css/styles.css" type="text/css" media="screen, projection" />
-    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
   </head>
   <body>
     <header>
-      <h1><a href="/">Daniel McGraw</a></h1>
+      <h1><a href="/">Jekyll Base</a></h1>
     </header>
     <section>
       {{ content }}
