--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">Jekyll Base</a></h1>
+      <h1><a href="/">{{ page.title }}</a></h1>
     </header>
     <section>
       {{ content }}
